Changing portfolio page to work with fetches

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,6 +27,8 @@
       <button onclick="addRandomFact()">New Fact</button>
       <div id="fact-container"></div>
       <p>If you want to learn more about me, click <a href="images.html">here</a>!</p>
+      <button onclick="addServerMessage()">Message From Server</button>
+      <div id="message-container"></div>
     </div>
   </body>
 </html>
