--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,8 +27,18 @@
       <button onclick="addRandomFact()">New Fact</button>
       <div id="fact-container"></div>
       <p>If you want to learn more about me, click <a href="images.html">here</a>!</p>
-      <button onclick="addServerMessage()">Message From Server</button>
+      <button onclick="addServerMessage()">See all comments!</button>
       <div id="message-container"></div>
+    </div>
+    <div id="content">
+      <form action="/data" method="POST">
+
+      <p>Leave a comment here!</p>
+      <input type="text" name="comment">
+      <br/><br/>
+
+      <input type="submit" />
+      </form>
     </div>
   </body>
 </html>
