--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -40,5 +40,10 @@
       <input type="submit" />
       </form>
     </div>
+    <div id="content">
+      <form action="/delete-data" method="POST">
+      <input type="submit" value="Delete all comments" />
+      </form>
+    </div>
   </body>
 </html>
