Added login and logout capabilities

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,7 +27,7 @@
       <button onclick="addRandomFact()">New Fact</button>
       <div id="fact-container"></div>
       <p>If you want to learn more about me, click <a href="images.html">here</a>!</p>
-      <button onclick="addServerMessage()">See all comments!</button>
+      <button onclick="checkLoginStatus()">See all comments!</button>
       <div id="message-container"></div>
     </div>
     <div id="content">
